fix a bug where text was too large and escape box

--- a/css/vieetmort.css
+++ b/css/vieetmort.css
@@ -48,7 +48,10 @@ p{
     font-size: 110%;
     font-weight: 300;
 
-    margin: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 
 }
 
@@ -98,11 +101,12 @@ h1{
 
   }
     p {
-    font-size: 40px;
+    font-size: 30px;
   }
   div div{
     width: 98vw;
     justify-items: center;
+    height: auto;
     }   
     html, body {margin: 0; overflow:scroll}
     button{
@@ -112,6 +116,8 @@ h1{
     border-style: solid;
     border-radius: 15px;
     border-width: 4px;
+
+    
 
 
     justify-self: center;
